# mlbnn

./: .gitignore  README.md  requirements.txt
advanced/: README.md
advanced/dumper/: .gitignore  README.md
advanced/dumper/dumpxAOD/: CMakeLists.txt
advanced/dumper/dumpxAOD/Root/: TrackWriter.cxx  TrackWriter.h
advanced/dumper/dumpxAOD/util/: dump-events.cxx  dump-minimal.cxx  dump-tracks.cxx
advanced/scripts/: read-four-vectors.py  read_four_vectors.py
atlas-sw/: .gitignore  get-dataset.sh  submit-to-grid.sh
atlas-sw/dumpxAOD/: .gitignore  CMakeLists.txt  setup.sh
atlas-sw/dumpxAOD/Root/: JetClassifier.cxx  JetClassifier.h  JetWriter.cxx  JetWriter.h
atlas-sw/dumpxAOD/grid/: submit.sh
atlas-sw/dumpxAOD/util/: dump-xaod.cxx
atlas-sw/xaod_dumpinator/: CMakeLists.txt  setup.sh
atlas-sw/xaod_dumpinator/dumpxAOD/: CMakeLists.txt
local-sw/: SumLayer.py  make_hists.py  make_roc_curves.py  plot-dataset.py  train_nn.py  validate_nn.py
local-sw/data/: .gitignore
xaod_dumpinator/: .gitignore
xaod_dumpinator/dumpxAOD/: CMakeLists.txt  setup.sh
xaod_dumpinator/dumpxAOD/Root/: JetWriter.cxx  JetWriter.h
xaod_dumpinator/dumpxAOD/util/: dump-xaod.cxx
